fix top row alignment

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -78,5 +78,5 @@ button.cancel {
 .top-row {
   display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
 }
